--- a/netlify.toml
+++ b/netlify.toml
@@ -12,3 +12,23 @@
 # Optional: Environment settings
 [build.environment]
   NODE_VERSION = "18"
+
+  [build]
+  base = "frontend"
+  command = "npm run build"
+  publish = "dist"
+
+[build]
+  base = "frontend"
+  command = "npm run build"
+  publish = "dist"
+
+[functions]
+  directory = "netlify/functions"
+
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
+
+
