--- a/backend/package.json
+++ b/backend/package.json
@@ -9,12 +9,15 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.91.0",
+    "bcrypt": "^6.0.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^8.2.1",
     "express-validator": "^7.0.1",
+    "nodemailer": "^7.0.12",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
