--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,6 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.91.0",
     "bcrypt": "^6.0.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
@@ -17,6 +16,7 @@
     "express": "^4.18.2",
     "express-rate-limit": "^8.2.1",
     "express-validator": "^7.0.1",
+    "mongodb": "^6.3.0",
     "nodemailer": "^7.0.12",
     "uuid": "^13.0.0"
   },
