--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,11 +2,9 @@
 PORT=5000
 NODE_ENV=production
 
-# Supabase Configuration
-# CRITICAL: Backend MUST use SERVICE_ROLE_KEY, NOT anon key
-# Get this from: Supabase Dashboard → Settings → API → service_role key (secret)
-# WARNING: Keep this secret! Never expose in frontend code
-SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key_here
+# Supabase Configuration (Legacy or Future Use)
+# MONGO_URI is currently used in config/database.js
+MONGO_URI=mongodb+srv://your_username:your_password@cluster.mongodb.net/algoforce?retryWrites=true&w=majority
 
 # Gmail SMTP Configuration (Use App Password, NOT your regular Gmail password)
 # Instructions to get App Password:
