--- a/backend/.env.example
+++ b/backend/.env.example
@@ -7,10 +7,6 @@ NODE_ENV=production
 MONGO_URI=mongodb+srv://your_username:your_password@cluster.mongodb.net/algoforce?retryWrites=true&w=majority
 
 # Gmail SMTP Configuration (Use App Password, NOT your regular Gmail password)
-# Instructions to get App Password:
-# 1. Enable 2-Factor Authentication on your Gmail account
-# 2. Go to https://myaccount.google.com/apppasswords
-# 3. Generate an app password for "Mail"
-# 4. Use that 16-character password below (no spaces)
-GMAIL_USER=your_gmail_address@gmail.com
+# Recommended Email: algoforceofficial.12@gmail.com
+GMAIL_USER=algoforceofficial.12@gmail.com
 GMAIL_APP_PASS=your_16_character_app_password_here
