fix(backend): resolve Render deployment issues and enhance production readiness
- Fixed directory scanning that was causing ENOENT errors on Render
- Updated server.js to use process.cwd() instead of hardcoded paths
- Enhanced PORT binding with proper Render environment support
- Added graceful shutdown handlers for SIGTERM/SIGINT
- Improved security scanning with safe directory traversal
- Added comprehensive deployment diagnostic tools
- Created detailed Render deployment guide
- Preserved all existing features: email service, MongoDB, CORS, rate limiting
- Ready for production deployment on Render.com

--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "deploy:check": "node DEPLOYMENT_HELPER.js"
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
