Update project files and add new features

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,12 +1,11 @@
 # Server Configuration
-PORT=5000
+PORT=8080
 NODE_ENV=production
 
-# Supabase Configuration (Legacy or Future Use)
-# MONGO_URI is currently used in config/database.js
+# MongoDB Configuration
 MONGO_URI=mongodb+srv://your_username:your_password@cluster.mongodb.net/algoforce?retryWrites=true&w=majority
 
-# Gmail SMTP Configuration (Use App Password, NOT your regular Gmail password)
-# Recommended Email: algoforceofficial.12@gmail.com
-GMAIL_USER=algoforceofficial.12@gmail.com
-GMAIL_APP_PASS=your_16_character_app_password_here
+# Twilio Configuration (Required for SMS OTP)
+TWILIO_ACCOUNT_SID=your_account_sid_here
+TWILIO_AUTH_TOKEN=your_auth_token_here
+TWILIO_SERVICE_SID=your_service_sid_here
