--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "deploy:check": "node DEPLOYMENT_HELPER.js"
+    "deploy:check": "node DEPLOYMENT_HELPER.js",
+    "test:integration": "node TEST_INTEGRATION.js"
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
@@ -19,6 +20,7 @@
     "express-validator": "^7.0.1",
     "mongodb": "^6.3.0",
     "nodemailer": "^7.0.12",
+    "twilio": "^5.12.0",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
