--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.2",
     "express-rate-limit": "^8.2.1",
     "express-validator": "^7.0.1",
+    "helmet": "^8.1.0",
     "mongodb": "^6.3.0",
     "nodemailer": "^7.0.12",
     "twilio": "^5.12.0",
